--- a/css/style.css
+++ b/css/style.css
@@ -184,10 +184,12 @@ footer > p{
 }
 /*Di bawah untuk resolusi mobile*/
 @media only screen and (max-width: 600px){
-
+    main{
+        padding-left: 0;
+        padding-right: 0;
+    }
     .col-25{
         width: 100%;
-        
     }
     .col-75{
         width: 100%;
