--- a/css/style.css
+++ b/css/style.css
@@ -210,4 +210,8 @@ footer > p{
     .lastsection{
         flex-direction: column;
     }
+    footer > p{
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
