--- a/css/style.css
+++ b/css/style.css
@@ -184,28 +184,42 @@ footer > p{
 }
 /*Di bawah untuk resolusi mobile*/
 @media only screen and (max-width: 600px){
+    main{
+        padding-left: 0;
+        padding-right: 0;
+    }
 
     .col-25{
         width: 100%;
-        
     }
+
     .col-75{
         width: 100%;
     }
+
     input[type=submit]{
         width: 100%;
         margin-bottom: 20px;
     }
+
     .header-container{
         flex-direction: column;
     }
+
     .navbar{
         flex-direction: column;
     }
+
     .logo{
         margin-bottom: 15px;
     }
+
     .lastsection{
         flex-direction: column;
+    }
+    
+    footer > p{
+        padding-left: 0;
+        padding-right: 0;
     }
 }
